# leachf

./: CMakeLists.txt  LICENSE  README.md
include/leachf/dtypes/: object.hpp  string.hpp
src/: builtins.cpp
